--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AboutFragment">
+    tools:context=".fragments.MenuFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,27 +17,29 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5"/>
 
-        <TextView
-            android:id="@+id/the_program"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/button_broca"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="The Program is Created By"
+            android:text="Broca Index"
             app:layout_constraintBottom_toTopOf="@id/guidelinee"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="20dp"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="10dp" />
 
-        <TextView
-            android:id="@+id/text_name"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/button_bmi"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your Name"
-            android:textSize="30dp"
+            android:text="Body Mass Index"
             app:layout_constraintTop_toBottomOf="@id/guidelinee"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="20dp" />
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
