--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -4,42 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AboutFragment">
+    tools:context=".fragments.ResultFragment">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidelinee"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5"/>
+            app:layout_constraintGuide_percent="0.5" />
 
         <TextView
-            android:id="@+id/the_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="The Program is Created By"
-            app:layout_constraintBottom_toTopOf="@id/guidelinee"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="20dp"
-            android:layout_marginBottom="15dp" />
-
-        <TextView
-            android:id="@+id/text_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Name"
-            android:textSize="30dp"
-            app:layout_constraintTop_toBottomOf="@id/guidelinee"
+            android:text="Add your information here"
+            android:id="@+id/text_information"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="20dp" />
-
-
+            android:textSize="24dp"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TRY AGAIN"
+            android:id="@+id/button_try_again"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </FrameLayout>
